added pen score for video result

--- a/pages-components/igraphics/components/IgraphicsVideoResultComponent/IgraphicsVideoResultComponent.module.scss
+++ b/pages-components/igraphics/components/IgraphicsVideoResultComponent/IgraphicsVideoResultComponent.module.scss
@@ -79,6 +79,16 @@
   }
 }
 
+.inputScore {
+    color: #fff;
+    height: 140px;
+    margin-top: 20px; 
+    width: 500px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 140px;
+}
+
 .body {
   width: 100%;
   margin-top: -15px;
