--- a/pages-components/igraphics/components/IgraphicsVideoResultComponent/IgraphicsVideoResultComponent.module.scss
+++ b/pages-components/igraphics/components/IgraphicsVideoResultComponent/IgraphicsVideoResultComponent.module.scss
@@ -57,9 +57,10 @@
       .score {
         height: 100%;
         width: 650px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+
         gap: 15px;
         font-size: 120px;
         color: #fff;
