--- a/pages-components/igraphics/components/shared-components/IgrGame.module.scss
+++ b/pages-components/igraphics/components/shared-components/IgrGame.module.scss
@@ -51,7 +51,7 @@
   }
 
   .main {
-    width: 700px;
+    min-width: 575px !important;  
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -80,7 +80,7 @@
             text-align: right;
           }
           .pen {
-            left: -50px;
+            left: -40px;
           }
         }
         &:last-of-type {
@@ -88,7 +88,7 @@
             text-align: left;
           }
           .pen {
-            right: -10px;
+            right: -30px;
           }
         }
         .ft {
@@ -105,10 +105,11 @@
         .pen {
           position: absolute;
           top: 0px;
-          margin-right: -30px;
+          // margin-right: -30px; 
           font-size: 70px;
           font-weight: 700;
-          width: 90px;
+          width: 100px !important;
+          min-width: 100px !important;  
           font-family: var(--ion-font-family);
           text-align: center !important;
         }
