path to font changed to footballista cdn

--- a/pages/global.scss
+++ b/pages/global.scss
@@ -2,7 +2,7 @@
   font-family: 'GetVoIP Grotesque';
   font-style: normal;
   font-weight: 700;
-  src: url('https://fonts.cdnfonts.com/s/21763/GetVoIP Grotesque.woff');
+  src: url('https://footballista.ru/api/img/fonts/getvoip.woff');
 }
 
 :root {
