--- a/pages-components/igraphics/components/IgraphicsVideoResultPhotoComponent/IgraphicsVideoResultPhotoComponent.module.scss
+++ b/pages-components/igraphics/components/IgraphicsVideoResultPhotoComponent/IgraphicsVideoResultPhotoComponent.module.scss
@@ -106,6 +106,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
+
         gap: 15px;
         font-size: 120px;
         color: #fff;
